--- a/src/styles/scss/production/style.scss
+++ b/src/styles/scss/production/style.scss
@@ -44,6 +44,7 @@
 @import "module/mod-warranty";
 @import "module/mod-video";
 @import "module/mod-logo-list";
+@import "module/mod-gif";
 
 /* layout */
 @import "layout/lyt-content";
