--- a/src/assets/css/icons.css
+++ b/src/assets/css/icons.css
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-pause:before {
+  content: "\e91e";
+}
 .icon-phone:before {
   content: "\e91c";
 }
