video change and fixes done

--- a/src/styles/scss/production/module/_mod-gif.scss
+++ b/src/styles/scss/production/module/_mod-gif.scss
@@ -2,5 +2,9 @@
 .mod-gif{
     iframe{
         transform: scale(1.5) !important;
+
+        @include mq-below($xs){
+            transform: scale(1.9) !important;
+        }
     }
 }
