--- a/src/styles/scss/production/base/_bs-banner.scss
+++ b/src/styles/scss/production/base/_bs-banner.scss
@@ -1,19 +1,20 @@
 //bs-banner
-.bs-banner{
+.bs-banner {
     height: 100vh;
     position: relative;
     overflow: hidden;
-    @include mq-below($xs){
+
+    @include mq-below($xs) {
         height: 82vh;
     }
 
-    .setBgSrc{
+    .setBgSrc {
         background-repeat: no-repeat;
         background-size: cover;
         background-position: bottom center;
     }
 
-    .banner-image-wrap{
+    .banner-image-wrap {
         position: absolute;
         left: 0;
         right: 0;
@@ -22,23 +23,25 @@
         z-index: 1;
     }
 
-    .banner-info{
+    .banner-info {
         text-align: center;
         position: absolute;
         bottom: 7rem;
         left: 0;
         right: 0;
         z-index: 2;
-        @include mq-below($xs){
+
+        @include mq-below($xs) {
             padding: 0 1.5rem;
             bottom: 1.5rem;
         }
     }
 
-    .banner-title{
-        @include font-source-sans(5.6rem,6rem, $font1, $font-medium, $clr-base, uppercase);
+    .banner-title {
+        @include font-source-sans(5.6rem, 6rem, $font1, $font-medium, $clr-base, uppercase);
         letter-spacing: 1rem;
-        @include mq-below($xs){
+
+        @include mq-below($xs) {
             letter-spacing: 0.1rem;
             font-size: 1.6rem;
             line-height: 2rem;
@@ -46,8 +49,8 @@
         }
     }
 
-    &:before{
-        content:'';
+    &:before {
+        content: '';
         position: absolute;
         top: 0;
         left: -60rem;
@@ -60,10 +63,12 @@
 
     .video-wrap {
         position: relative;
-        @include mq-below($xs){
+
+        @include mq-below($xs) {
             width: 100%;
             height: 100%;
         }
+
         &:after {
             content: '';
             position: absolute;
@@ -74,9 +79,12 @@
             width: 100%;
             background: rgba($clr-root, 0.5);
         }
+
         .video-player {
             width: 100%;
             height: auto;
+            // height: 100vh;
+            // transform: scale(1.2);
         }
     }
 
@@ -84,10 +92,10 @@
 
 @keyframes scale {
     100% {
-      -webkit-transform:scale(5) rotateX(360deg);
-      -moz-transform:scale(5) rotateX(360deg);
-      -ms-transform:scale(5) rotateX(360deg);
-      -o-transform:scale(5) rotateX(360deg);
-      transform:scale(5) rotateX(360deg);
+        -webkit-transform: scale(5) rotateX(360deg);
+        -moz-transform: scale(5) rotateX(360deg);
+        -ms-transform: scale(5) rotateX(360deg);
+        -o-transform: scale(5) rotateX(360deg);
+        transform: scale(5) rotateX(360deg);
     }
 }
