--- a/src/styles/scss/production/base/_bs-service.scss
+++ b/src/styles/scss/production/base/_bs-service.scss
@@ -1,5 +1,5 @@
 //bs-service
-.bs-service{
+.bs-service {
     display: flex;
     align-items: center;
     position: relative;
@@ -9,8 +9,8 @@
 
     // }
 
-    .title{
-        @include font-source-sans(8rem,8.4rem, $font1, $font-bold, $clr-base, uppercase);
+    .title {
+        @include font-source-sans(8rem, 8.4rem, $font1, $font-bold, $clr-base, uppercase);
         margin-bottom: 8rem;
         position: relative;
         z-index: 2;
@@ -21,8 +21,8 @@
         }
     }
 
-    .feature-item{
-        @include font-source-sans(2.8rem,3.2rem, $font1, $font-smbold, $clr-primary, uppercase);
+    .feature-item {
+        @include font-source-sans(2.8rem, 3.2rem, $font1, $font-smbold, $clr-primary, uppercase);
         letter-spacing: 0.3rem;
 
         @include mq-below($xs) {
@@ -31,23 +31,24 @@
         }
     }
 
-    .water-mark{
-        @include font-source-sans(28rem,35rem, $font1, $font-xbold, $clr-primary, uppercase);
+    .water-mark {
+        @include font-source-sans(28rem, 35rem, $font1, $font-xbold, $clr-primary, uppercase);
         font-style: italic;
         opacity: 0.2;
 
         @include mq-below($xs) {
-            @include font-source-sans(3.3rem);
+            @include font-source-sans(3.3rem, 3.8rem);
         }
     }
 
-    .img-wrap{
+    .img-wrap {
         max-width: 80rem;
-        @include mq-below($xs){
+
+        @include mq-below($xs) {
             position: relative;
 
-            &:after{
-                content:'';
+            &:after {
+                content: '';
                 position: absolute;
                 left: 0;
                 right: 0;
@@ -58,25 +59,25 @@
             }
         }
 
-        
-        
+
+
 
     }
 
-    .feature-list{
+    .feature-list {
         margin-bottom: 5rem;
         position: relative;
 
-        @include mq-below($xs){
+        @include mq-below($xs) {
             margin-bottom: 2rem;
         }
 
-        .feature-item{
+        .feature-item {
             display: inline-flex;
             align-items: center;
 
-            &:after{
-                content:'';
+            &:after {
+                content: '';
                 width: 1rem;
                 height: 1rem;
                 border-radius: 100%;
@@ -88,17 +89,18 @@
                     height: 0.5rem;
                     margin: 0 0.5rem;
                 }
-                
+
             }
-            &:last-child{
-                &:after{
+
+            &:last-child {
+                &:after {
                     display: none;
                 }
             }
         }
     }
 
-    .info-wrap{
+    .info-wrap {
         position: relative;
 
         @include mq-below($xs) {
@@ -109,9 +111,16 @@
             z-index: 2;
         }
 
-        .water-mark{
+        .water-mark {
             position: absolute;
             z-index: 1;
+        }
+    }
+
+    .btn {
+        @include mq-below($xs) {
+            position: relative;
+            z-index: 3;
         }
     }
 
