uifixes dones and feedback points resolved

--- a/src/styles/scss/production/config/_mixin.scss
+++ b/src/styles/scss/production/config/_mixin.scss
@@ -17,7 +17,7 @@
 @mixin opacity($value) {
     $IEValue: $value*100;
     opacity: $value;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity="+$IEValue+")";
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=" +$IEValue+")";
     filter: alpha(opacity=$IEValue);
 }
 
@@ -26,35 +26,39 @@
     &.placeholder {
         @content;
     }
+
     &:-moz-placeholder {
         @content;
     }
+
     &::-moz-placeholder {
         @content;
     }
+
     &:-ms-input-placeholder {
         @content;
     }
+
     &::-webkit-input-placeholder {
         @content;
     }
 }
 
 //media query
-@mixin mq-below($breakpoint){
-    @media only screen and (max-width:$breakpoint){
+@mixin mq-below($breakpoint) {
+    @media only screen and (max-width:$breakpoint) {
         @content;
     }
 }
 
-@mixin mq-between($lower,$upper){
-    @media only screen and (min-width:$lower) and (max-width:$upper){
+@mixin mq-between($lower, $upper) {
+    @media only screen and (min-width:$lower) and (max-width:$upper) {
         @content;
     }
 }
 
-@mixin mq-above($breakpoint){
-    @media only screen and (min-width:$breakpoint){
+@mixin mq-above($breakpoint) {
+    @media only screen and (min-width:$breakpoint) {
         @content;
     }
 }
@@ -67,22 +71,27 @@
 }
 
 //font styles
-@mixin font-source-sans($size: false, $lh: false, $family:false, $weight: false,  $colour: false, $tt:false) {
+@mixin font-source-sans($size: false, $lh: false, $family: false, $weight: false, $colour: false, $tt: false) {
     @if $family {
         font-family: $family;
     }
+
     @if $size {
         font-size: $size;
     }
+
     @if $colour {
         color: $colour;
     }
+
     @if $weight {
         font-weight: $weight;
     }
+
     @if $lh {
         line-height: $lh;
     }
+
     @if $tt {
         text-transform: $tt;
     }
@@ -91,31 +100,53 @@
 
 //background Opacity
 @mixin background-opacity($color,
-$opacity) {
+    $opacity) {
     background: rgba($color, $opacity);
 }
 
 // Scroll bar - Custom 
 @mixin scrollbars($size,
-$foreground-color,
-$background-color: mix($foreground-color, white, 50%)) {
+    $foreground-color,
+    $background-color: mix($foreground-color, white, 50%)) {
+
     // For Google Chrome
     &::-webkit-scrollbar {
         width: $size;
         height: $size;
         cursor: grab;
     }
+
     &::-webkit-scrollbar-thumb {
         background: $foreground-color;
         cursor: grab;
     }
+
     &::-webkit-scrollbar-track {
         background: $background-color;
         cursor: grab;
     }
+
     // For Internet Explorer
     & {
         scrollbar-face-color: $foreground-color;
         scrollbar-track-color: $background-color;
+    }
+}
+
+@mixin keyframes($name) {
+    @-webkit-keyframes #{$name} {
+        @content;
+    }
+
+    @-moz-keyframes #{$name} {
+        @content;
+    }
+
+    @-ms-keyframes #{$name} {
+        @content;
+    }
+
+    @keyframes #{$name} {
+        @content;
     }
 }
