--- a/src/styles/scss/production/style.scss
+++ b/src/styles/scss/production/style.scss
@@ -32,6 +32,7 @@
 @import "base/bs-tabs";
 @import "base/bs-videoplayer";
 @import "base/bs-action-fly";
+@import "base/bs-keyframe-anim";
 
 
 /* module */
