--- a/src/styles/scss/production/module/_mod-video.scss
+++ b/src/styles/scss/production/module/_mod-video.scss
@@ -78,16 +78,43 @@
       }
     }
 
+    // &.typ-primary {
+
+    //   .bs-videoplayer {
+    //     -webkit-box-shadow: 0px 0px 23px -7px rgba(64, 197, 231, 1);
+    //     -moz-box-shadow: 0px 0px 23px -7px rgba(64, 197, 231, 1);
+    //     box-shadow: 0px 0px 23px -7px rgba(64, 197, 231, 1);
+    //   }
+
+    // }
+
+    // &.typ-secondary {
+
+    //   .bs-videoplayer {
+    //     -webkit-box-shadow: 0px 0px 23px -7px rgba(243, 144, 32, 1);
+    //     -moz-box-shadow: 0px 0px 23px -7px rgba(243, 144, 32, 1);
+    //     box-shadow: 0px 0px 23px -7px rgba(243, 144, 32, 1);
+    //   }
+
+    // }
+
     .bs-videoplayer {
       .playerWrapper {
         >div {
-          height: 72rem !important;
+          height: 78vh !important;
 
           @include mq-below($xs) {
             height: 25rem !important;
           }
         }
+
+        iframe {
+          height: 100%;
+        }
       }
+
+
+
     }
   }
 
