--- a/src/styles/scss/production/style.scss
+++ b/src/styles/scss/production/style.scss
@@ -33,6 +33,7 @@
 @import "base/bs-videoplayer";
 @import "base/bs-action-fly";
 @import "base/bs-keyframe-anim";
+@import "base/bs-message-card";
 
 
 /* module */
