--- a/src/styles/scss/production/config/_normalize.scss
+++ b/src/styles/scss/production/config/_normalize.scss
@@ -103,7 +103,8 @@ abbr[title] {
   text-decoration: underline dotted;
   /* 2 */
 }
-address{
+
+address {
   font-style: unset;
 }
 
@@ -387,7 +388,20 @@ template {
 [hidden] {
   display: none;
 }
- p {
-    margin:0;
-    padding: 0;
- }
+
+p {
+  margin: 0;
+  padding: 0;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
