--- a/src/styles/scss/production/base/_bs-message-card.scss
+++ b/src/styles/scss/production/base/_bs-message-card.scss
@@ -1,64 +1,30 @@
 //bs-message-card
 .bs-message-card {
-    @include background-opacity($clr-turnary, 0.8);
-    padding: 2rem;
-    max-width: 30rem;
-}
+    background-color: $clr-root;
+    padding: 5rem;
+    width: 60rem;
+    -webkit-box-shadow: 0px 0px 23px -7px rgba(114, 255, 0, 1);
+    -moz-box-shadow: 0px 0px 23px -7px rgba(114, 255, 0, 1);
+    box-shadow: 0px 0px 23px -7px rgba(114, 255, 0, 1);
 
-.checkmark {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    display: block;
-    stroke-width: 2;
-    stroke: #4bb71b;
-    stroke-miterlimit: 10;
-    box-shadow: inset 0px 0px 0px #4bb71b;
-    animation: fill .4s ease-in-out .4s forwards, scale .3s ease-in-out .9s both;
-    position: relative;
-    top: 5px;
-    right: 5px;
-    margin: 0 auto;
-}
-
-.checkmark__circle {
-    stroke-dasharray: 166;
-    stroke-dashoffset: 166;
-    stroke-width: 2;
-    stroke-miterlimit: 10;
-    stroke: #4bb71b;
-    fill: #fff;
-    animation: stroke 0.6s cubic-bezier(0.65, 0, 0.45, 1) forwards;
-
-}
-
-.checkmark__check {
-    transform-origin: 50% 50%;
-    stroke-dasharray: 48;
-    stroke-dashoffset: 48;
-    animation: stroke 0.3s cubic-bezier(0.65, 0, 0.45, 1) 0.8s forwards;
-}
-
-@keyframes stroke {
-    100% {
-        stroke-dashoffset: 0;
-    }
-}
-
-@keyframes scale {
-
-    0%,
-    100% {
-        transform: none;
+    .icon-wrap {
+        display: block;
+        width: 12rem;
+        height: 12rem;
+        margin: 0 auto 3rem;
     }
 
-    50% {
-        transform: scale3d(1.1, 1.1, 1);
+    .content-wrap {
+        text-align: center;
     }
-}
 
-@keyframes fill {
-    100% {
-        box-shadow: inset 0px 0px 0px 30px #4bb71b;
+    .text {
+        @include font-source-sans(2.5rem, 3rem, $font1, $font-smbold, $clr-base, initial);
+
+        &.text-sm {
+            margin-top: 1rem;
+            @include font-source-sans(1.8rem, 2.4rem, $font1, $font-smbold, $clr-base, initial);
+        }
     }
+
 }
