--- a/src/styles/scss/production/base/_bs-menu.scss
+++ b/src/styles/scss/production/base/_bs-menu.scss
@@ -1,5 +1,5 @@
 //bs-menu
-.bs-menu{
+.bs-menu {
     position: fixed;
     top: 0;
     bottom: 0;
@@ -12,37 +12,42 @@
     align-items: center;
     width: 40rem;
     overflow-y: auto;
-    @include mq-below($xs){
+
+    @include mq-below($xs) {
         width: 100%;
     }
 
-    &.active{
+    &.active {
         transform: translateX(0);
     }
-    .menu-link{
+
+    .menu-link {
         position: relative;
         display: block;
-        @include font-source-sans(3.6rem,4rem, $font1, $font-smbold, $clr-base, capitalize);
+        @include font-source-sans(3.6rem, 4rem, $font1, $font-smbold, $clr-base, capitalize);
         padding: 0.6rem 8rem;
-        @include mq-below($xs){
+
+        @include mq-below($xs) {
             font-size: 1.6rem;
             line-height: 2rem;
             padding: 0.6rem 3rem;
         }
-        &.typ-sm{
+
+        &.typ-sm {
             font-size: 2.4rem;
             line-height: 2.8rem;
             font-weight: $font-medium;
-            @include mq-below($xs){
+
+            @include mq-below($xs) {
                 font-size: 1.4rem;
                 line-height: 1.8rem;
             }
         }
 
-        
 
-        &:after{
-            content:'';
+
+        &:after {
+            content: '';
             left: 0;
             top: 0;
             bottom: 0;
@@ -53,15 +58,15 @@
             z-index: -1;
         }
 
-        &:hover{
-            &:after{
+        &:hover {
+            &:after {
                 width: 100%;
             }
         }
 
     }
 
-    .menu-close{
+    .menu-close {
         position: absolute;
         top: 5rem;
         right: 6rem;
@@ -70,7 +75,8 @@
         width: 3rem;
         height: 3rem;
         z-index: 10;
-        @include mq-below($xs){
+
+        @include mq-below($xs) {
             top: 0;
             right: 0.5rem;
             font-size: 2rem;
@@ -79,50 +85,56 @@
         }
     }
 
-    .menu-item{
+    .menu-item {
         margin-bottom: 3rem;
         display: block;
-        @include mq-below($xs){
+
+        @include mq-below($xs) {
             margin-bottom: 1rem;
         }
-        &:last-child{
+
+        &:last-child {
             margin-bottom: 0;
         }
-        &:nth-child(even){
-            .menu-link{
-                &:after{
-                    background: rgba(64,196,226,1);
-                    background: -moz-linear-gradient(left, rgba(64,196,226,1) 0%, rgba(64,198,231,0.5) 54%, rgba(64,198,231,0) 100%);
-                    background: -webkit-gradient(left top, right top, color-stop(0%, rgba(64,196,226,1)), color-stop(54%, rgba(64,198,231,0.5)), color-stop(100%, rgba(64,198,231,0)));
-                    background: -webkit-linear-gradient(left, rgba(64,196,226,1) 0%, rgba(64,198,231,0.5) 54%, rgba(64,198,231,0) 100%);
-                    background: -o-linear-gradient(left, rgba(64,196,226,1) 0%, rgba(64,198,231,0.5) 54%, rgba(64,198,231,0) 100%);
-                    background: -ms-linear-gradient(left, rgba(64,196,226,1) 0%, rgba(64,198,231,0.5) 54%, rgba(64,198,231,0) 100%);
-                    background: linear-gradient(to right, rgba(64,196,226,1) 0%, rgba(64,198,231,0.5) 54%, rgba(64,198,231,0) 100%);
+
+        &:nth-child(even) {
+            .menu-link {
+                &:after {
+                    background: rgba(64, 196, 226, 1);
+                    background: -moz-linear-gradient(left, rgba(64, 196, 226, 1) 0%, rgba(64, 198, 231, 0.5) 54%, rgba(64, 198, 231, 0) 100%);
+                    background: -webkit-gradient(left top, right top, color-stop(0%, rgba(64, 196, 226, 1)), color-stop(54%, rgba(64, 198, 231, 0.5)), color-stop(100%, rgba(64, 198, 231, 0)));
+                    background: -webkit-linear-gradient(left, rgba(64, 196, 226, 1) 0%, rgba(64, 198, 231, 0.5) 54%, rgba(64, 198, 231, 0) 100%);
+                    background: -o-linear-gradient(left, rgba(64, 196, 226, 1) 0%, rgba(64, 198, 231, 0.5) 54%, rgba(64, 198, 231, 0) 100%);
+                    background: -ms-linear-gradient(left, rgba(64, 196, 226, 1) 0%, rgba(64, 198, 231, 0.5) 54%, rgba(64, 198, 231, 0) 100%);
+                    background: linear-gradient(to right, rgba(64, 196, 226, 1) 0%, rgba(64, 198, 231, 0.5) 54%, rgba(64, 198, 231, 0) 100%);
                     filter: "progid:DXImageTransform.Microsoft.gradient( startColorstr='#40c4e2', endColorstr='#40c6e7', GradientType=1 )";
                 }
             }
-            
+
         }
 
-        &:nth-child(odd){
-            .menu-link{
-                &:after{
-                    background: rgba(243,145,32,1);
-                    background: -moz-linear-gradient(left, rgba(243,145,32,1) 0%, rgba(243,145,32,0.5) 54%, rgba(243,145,32,0) 100%);
-                    background: -webkit-gradient(left top, right top, color-stop(0%, rgba(243,145,32,1)), color-stop(54%, rgba(243,145,32,0.5)), color-stop(100%, rgba(243,145,32,0)));
-                    background: -webkit-linear-gradient(left, rgba(243,145,32,1) 0%, rgba(243,145,32,0.5) 54%, rgba(243,145,32,0) 100%);
-                    background: -o-linear-gradient(left, rgba(243,145,32,1) 0%, rgba(243,145,32,0.5) 54%, rgba(243,145,32,0) 100%);
-                    background: -ms-linear-gradient(left, rgba(243,145,32,1) 0%, rgba(243,145,32,0.5) 54%, rgba(243,145,32,0) 100%);
-                    background: linear-gradient(to right, rgba(243,145,32,1) 0%, rgba(243,145,32,0.5) 54%, rgba(243,145,32,0) 100%);
+        &:nth-child(odd) {
+            .menu-link {
+                &:after {
+                    background: rgba(243, 145, 32, 1);
+                    background: -moz-linear-gradient(left, rgba(243, 145, 32, 1) 0%, rgba(243, 145, 32, 0.5) 54%, rgba(243, 145, 32, 0) 100%);
+                    background: -webkit-gradient(left top, right top, color-stop(0%, rgba(243, 145, 32, 1)), color-stop(54%, rgba(243, 145, 32, 0.5)), color-stop(100%, rgba(243, 145, 32, 0)));
+                    background: -webkit-linear-gradient(left, rgba(243, 145, 32, 1) 0%, rgba(243, 145, 32, 0.5) 54%, rgba(243, 145, 32, 0) 100%);
+                    background: -o-linear-gradient(left, rgba(243, 145, 32, 1) 0%, rgba(243, 145, 32, 0.5) 54%, rgba(243, 145, 32, 0) 100%);
+                    background: -ms-linear-gradient(left, rgba(243, 145, 32, 1) 0%, rgba(243, 145, 32, 0.5) 54%, rgba(243, 145, 32, 0) 100%);
+                    background: linear-gradient(to right, rgba(243, 145, 32, 1) 0%, rgba(243, 145, 32, 0.5) 54%, rgba(243, 145, 32, 0) 100%);
                     filter: "progid:DXImageTransform.Microsoft.gradient( startColorstr='#f39120', endColorstr='#f39120', GradientType=1 )";
                 }
             }
-            
+
         }
     }
 
-    .menu-wrap{
-        @include mq-below($xs){
+    .menu-wrap {
+        height: 100vh;
+        padding: 3rem 0;
+
+        @include mq-below($xs) {
             width: 100%;
         }
     }
