--- a/src/styles/scss/production/base/_btn.scss
+++ b/src/styles/scss/production/base/_btn.scss
@@ -47,6 +47,18 @@
                 color: $clr-secondary;
             }
         }
+
+        &.btn-disabled {
+            color: $clr-base;
+
+            &:before {
+                background-color: rgba($clr-primary,0.5);
+            }
+
+            span {
+                mix-blend-mode: exclusion; 
+            }
+        }
     }
 }
 
