--- a/src/styles/scss/production/base/_btn.scss
+++ b/src/styles/scss/production/base/_btn.scss
@@ -50,6 +50,7 @@
 
         &.btn-disabled {
             color: $clr-base;
+            opacity: 0.5;
 
             &:before {
                 background-color: rgba($clr-primary,0.5);
