feedback points resolved

--- a/src/styles/scss/production/base/_bs-banner.scss
+++ b/src/styles/scss/production/base/_bs-banner.scss
@@ -64,6 +64,10 @@
     .video-wrap {
         position: relative;
 
+        @include mq-above($md) {
+            transform: scale(1.15);
+        }
+
         @include mq-below($xs) {
             width: 100%;
             height: 100%;
