image testing and form and customise word spelling change

--- a/src/styles/scss/production/base/_bs-banner.scss
+++ b/src/styles/scss/production/base/_bs-banner.scss
@@ -92,6 +92,15 @@
         }
     }
 
+    .img-wrap {
+        img{
+            @include mq-below($xs) {
+                width: 100%;
+                height: 30rem;
+            }
+        }
+    }
+
 }
 
 @keyframes scale {
